force-app/main/default/objects/User/fields/Access_for_International_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Access_for_International_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked = this user sees the International Marketing tab/component.</description>
    <label>Access for International Marketing</label>
    <type>Checkbox</type>
</CustomField>