force-app/main/default/objects/User/fields/Access_to_IM_Rate_Manager__c.field-meta.xml
<CustomField>
    <fullName>Access_to_IM_Rate_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked = this user sees the RATES screen inside International Marketing and can update the exchange rates (Price Calculator &quot;International Marketing&quot; row). Independent of the domestic Access to Quote Rate Manager.</description>
    <label>Access to IM Rate Manager</label>
    <type>Checkbox</type>
</CustomField>