force-app/main/default/objects/User/fields/Can_View_IM_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Can_View_IM_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked = this user sees the PENDING APPROVALS tab inside International Marketing. Independent of the domestic Can View Approvals.</description>
    <label>Can View IM Approvals</label>
    <type>Checkbox</type>
</CustomField>