force-app/main/default/objects/User/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <label>Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crash_Barrier_Department</fullName>
                <label>Crash Barrier - Department</label>
            </value>
            <value>
                <fullName>High_Mast_Department</fullName>
                <label>High Mast - Department</label>
            </value>
            <value>
                <fullName>Solar_Structure_Department</fullName>
                <label>Solar Structure - Department</label>
            </value>
            <value>
                <fullName>Steel_Pipes_Department</fullName>
                <label>Steel Pipes - Department</label>
            </value>
            <value>
                <fullName>Steel_Tubular_Pole_Department</fullName>
                <label>Steel Tubular Pole - Department</label>
            </value>
            <value>
                <fullName>Transmission_Tower_Department</fullName>
                <label>Transmission Tower - Department</label>
            </value>
            <value>
                <fullName>Core_Department</fullName>
                <label>Core - Department</label>
            </value>
            <value>
                <fullName>HDPE_Pipe_Department</fullName>
                <label>HDPE Pipe - Department</label>
            </value>
            <value>
                <fullName>Telecom_Tower_Department</fullName>
                <label>Telecom Tower - Department</label>
            </value>
            <value>
                <fullName>PEB_Department</fullName>
                <label>PEB - Department</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>