force-app/main/default/objects/User/fields/Profile_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name_Formula__c</fullName>
    <formula>Profile.Name</formula>
    <label>Profile Name Formula</label>
    <type>Text</type>
</CustomField>