force-app/main/default/objects/User/fields/Target_Manager__c.field-meta.xml
<CustomField>
    <fullName>Target_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Manager</label>
    <type>Checkbox</type>
</CustomField>